// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`askNotificationPermissions onNotification should deep link to ME user's contact screen 1`] = `
Array [
  Object {
    "params": Object {
      "person": Object {
        "id": "1",
        "type": "person",
      },
    },
    "routeName": "nav/CONTACT",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to add contact screen 1`] = `
Array [
  Object {
    "params": Object {
      "isJean": true,
      "onComplete": [Function],
      "organization": Object {
        "id": "2",
      },
    },
    "routeName": "nav/ADD_CONTACT",
    "type": "Navigation/NAVIGATE",
  },
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to contact screen 1`] = `
Array [
  Object {
    "person": Object {
      "id": "1",
      "type": "person",
    },
    "type": "app/LOAD_PERSON_DETAILS",
  },
  Object {
    "params": Object {
      "organization": Object {
        "id": "2",
      },
      "person": Object {
        "id": "1",
        "type": "person",
      },
    },
    "routeName": "nav/CONTACT",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to contact screen on iOS 1`] = `
Array [
  Object {
    "person": Object {
      "id": "1",
      "type": "person",
    },
    "type": "app/LOAD_PERSON_DETAILS",
  },
  Object {
    "params": Object {
      "organization": Object {
        "id": "2",
      },
      "person": Object {
        "id": "1",
        "type": "person",
      },
    },
    "routeName": "nav/CONTACT",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to home screen 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to main steps tab screen 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`askNotificationPermissions onRegister should update notification token for android devices 1`] = `
Array [
  Array [
    Object {
      "FETCH": "SET_PUSH_TOKEN_FETCH",
      "SUCCESS": "SET_PUSH_TOKEN_SUCCESS",
      "endpoint": "undefined/apis/v4/push_notification_device_tokens",
      "method": "post",
      "name": "SET_PUSH_TOKEN",
    },
    Object {
      "include": "",
    },
    Object {
      "data": Object {
        "attributes": Object {
          "platform": "GCM",
          "token": "New Token",
        },
        "type": "push_notification_device_token",
      },
    },
  ],
]
`;

exports[`askNotificationPermissions onRegister should update notification token for android devices 2`] = `
Array [
  Object {
    "type": "SET_PUSH_TOKEN_SUCCESS",
  },
]
`;

exports[`askNotificationPermissions onRegister should update notification token for iOS devices 1`] = `
Array [
  Array [
    Object {
      "FETCH": "SET_PUSH_TOKEN_FETCH",
      "SUCCESS": "SET_PUSH_TOKEN_SUCCESS",
      "endpoint": "undefined/apis/v4/push_notification_device_tokens",
      "method": "post",
      "name": "SET_PUSH_TOKEN",
    },
    Object {
      "include": "",
    },
    Object {
      "data": Object {
        "attributes": Object {
          "platform": "APNS",
          "token": "New Token",
        },
        "type": "push_notification_device_token",
      },
    },
  ],
]
`;

exports[`askNotificationPermissions onRegister should update notification token for iOS devices 2`] = `
Array [
  Object {
    "type": "SET_PUSH_TOKEN_SUCCESS",
  },
]
`;

exports[`showReminderScreen should show Notification Primer screen 1`] = `
Array [
  Object {
    "params": Object {
      "onComplete": [Function],
    },
    "routeName": "nav/NOTIFICATION_PRIMER",
    "type": "Navigation/NAVIGATE",
  },
  Object {
    "immediate": undefined,
    "key": undefined,
    "type": "Navigation/BACK",
  },
]
`;
